tests/machine/x/kt/cross_join.error
line 78:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/cross_join.kt:78:39: error: unresolved reference: orderId
        println(listOf("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName).joinToString(" "))
                                      ^
/workspace/mochi/tests/machine/x/kotlin/cross_join.kt:78:70: error: unresolved reference: orderCustomerId
        println(listOf("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName).joinToString(" "))
                                                                     ^
/workspace/mochi/tests/machine/x/kotlin/cross_join.kt:78:107: error: unresolved reference: orderTotal
        println(listOf("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName).joinToString(" "))
                                                                                                          ^
/workspace/mochi/tests/machine/x/kotlin/cross_join.kt:78:142: error: unresolved reference: pairedCustomerName
        println(listOf("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName).joinToString(" "))
                                                                                                                                             ^

 77:     for (entry in result) {
 78:         println(listOf("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName).joinToString(" "))
 79:     }
